added navbar, pic, basic layout of portf page.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Ruiheng's Portfolio</title>
+        <link href='./css/index.css' type='text/css' rel='stylesheet'/>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Oswald:wght@500&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+        <header>  <!-- entire dark blue nav bar -->
+            <div class='title'>
+                <h2>Ruiheng's</h2>
+                <h1>Portfolio</h1>
+            </div>
+
+            <div class='menu-and-pic'>
+                <ul>
+                    <li class='menu-link'>Portfolio</li>
+                    <li><a href='./html/blog' class='menu-link'>Blog</a></li>
+                    <li><a href='./html/contact' class='menu-link'>Contact</a></li>
+                </ul>
+                <img src="./images/profilepic3.jpg" alt='Profile Icon'/>
+            </div>
+        </header>
+
+        <section id='main-body-area'>
+            <h2 class='category-title'>Computer Science</h2>
+            <div class='category'>  <!-- CS -->
+                <div class='content-box'>
+                    <h3 class='content-title'></h3>
+                </div>
+            </div>
+        </section>
+    </body>
+</html>
