basically done with guided projects page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
             <div class='menu-and-pic'>
                 <ul>
-                    <li class='menu-link'>Portfolio</li>
-                    <li><a href='./html/blog' class='menu-link clickable'>Blog</a></li>
-                    <li><a href='./html/contact' class='menu-link clickable'>Contact</a></li>
+                    <li class='current'>Portfolio</li>
+                    <li><a href='./html/blog' class='menu-link'>Blog</a></li>
+                    <li><a href='./html/contact' class='menu-link'>Contact</a></li>
                 </ul>
                 <img src="./images/profilepic3.jpg" alt='Profile Icon'/>
             </div>
@@ -33,13 +33,13 @@
             
             <div class='category category1'>
                 <h2 class='category-title'>Computer Science</h2>
-                <h3 class='category-subtitle'>Small projects to implement concepts I picked up from the <span>Codecademy Computer Science</span> course.</h3>
+                <h3 class='category-subtitle'>Simple programs to implement concepts I picked up from the <span>Codecademy Computer Science</span> course.</h3>
                 <h4 class='category-subtitle'>These are exhibited on Repl.it for convenience. Enter <span>python3 script.py</span> in the console to begin each program.</h4>
                 <div class='category-space'>
 
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/towersofhanoi.gif' alt='Towers of Hanoi' class='content-image'/>
+                            <img src='./images/towersofhanoi.png' alt='Towers of Hanoi' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary">  
@@ -119,15 +119,15 @@
 
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/choredoorpic.PNG' alt='Chore Door' class='content-image'/>
+                            <img src='./images/teacozy.PNG' alt='Tea Cozy' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Chore Door!</h3> 
-                                <p class='content-summary-text'>Basic guessing game to test out JavaScript logic writing.</p>
+                                <h3 class='content-summary-title'>Tea Cozy</h3> 
+                                <p class='content-summary-text'>Tea business website built working with Flexbox CSS.</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/chore-door/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/chore-door' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Tea-Cozy/' target='_blank'>Visit</a>
+                                    <a href='https://github.com/sun-ruiheng/Tea-Cozy/' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
@@ -149,15 +149,15 @@
                     
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/choredoorpic.PNG' alt='Chore Door' class='content-image'/>
+                            <img src='./images/buginvaders.PNG' alt='Bug Invaders' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Chore Door!</h3> 
-                                <p class='content-summary-text'>Basic guessing game to test out JavaScript logic writing.</p>
+                                <h3 class='content-summary-title'>Bug Invaders</h3> 
+                                <p class='content-summary-text'>Survive and kill all the pesky bug invaders!</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/chore-door/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/chore-door' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Bug-Invaders/' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/bug-invaders' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
@@ -165,15 +165,15 @@
 
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/choredoorpic.PNG' alt='Chore Door' class='content-image'/>
+                            <img src='./images/conundrum.png' alt='Counting Conundrum' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Chore Door!</h3> 
-                                <p class='content-summary-text'>Basic guessing game to test out JavaScript logic writing.</p>
+                                <h3 class='content-summary-title'>Counting Conundrum</h3> 
+                                <p class='content-summary-text'>Remember the numbers, old man!</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/chore-door/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/chore-door' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Counting-Conundrum/' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/counting-conundrum' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
@@ -181,15 +181,15 @@
 
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/choredoorpic.PNG' alt='Chore Door' class='content-image'/>
+                            <img src='./images/codeyjump.PNG' alt='Codey Jump' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Chore Door!</h3> 
-                                <p class='content-summary-text'>Basic guessing game to test out JavaScript logic writing.</p>
+                                <h3 class='content-summary-title'>Codey Jump</h3> 
+                                <p class='content-summary-text'>Jump, Jump, Jump. There is no point to this game!</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/chore-door/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/chore-door' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Codey-Jump/' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/Codey-Jump' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
