--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class="overlay-content">
                             <div class="content-summary"> 
                                 <h3 class='content-summary-title'>Bug Invaders</h3> 
-                                <p class='content-summary-text'>Survive and kill all the pesky bug invaders!</p>
+                                <p class='content-summary-text'>Survive and kill all the pesky bug invaders! Press space to fight back.</p>
                                 <span>
                                     <a href='https://sun-ruiheng.github.io/Bug-Invaders/' target='_blank'>Try It!</a>
                                     <a href='https://github.com/sun-ruiheng/bug-invaders' target='_blank'>GitHub</a>
@@ -170,7 +170,7 @@
                         <div class="overlay-content">
                             <div class="content-summary"> 
                                 <h3 class='content-summary-title'>Counting Conundrum</h3> 
-                                <p class='content-summary-text'>Remember the numbers, old man!</p>
+                                <p class='content-summary-text'>Remember the numbers, and recall in ascending order!</p>
                                 <span>
                                     <a href='https://sun-ruiheng.github.io/Counting-Conundrum/' target='_blank'>Try It!</a>
                                     <a href='https://github.com/sun-ruiheng/counting-conundrum' target='_blank'>GitHub</a>
