added aboutme page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class='menu-and-pic'>
                 <ul>
                     <li class='current'>Portfolio</li>
-                    <li><a href='./html/blog' class='menu-link'>Blog</a></li>
-                    <li><a href='./html/contact' class='menu-link'>Contact</a></li>
+                    <li><a href='./html/blog.html' class='menu-link'>Blog</a></li>
+                    <li><a href='./html/aboutme.html' class='menu-link'>About Me</a></li>
                 </ul>
                 <img src="./images/profilepic3.jpg" alt='Profile Icon'/>
             </div>
