--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class='category category1'>
                 <h2 class='category-title'>Personal Projects</h2>
-                <h3 class='category-subtitle'>The more original projects of mine. Discount the freakiness, I'm trying to have fun!</h3>
+                <h3 class='category-subtitle'>The more original projects of mine. Discount the dodgy stuff, I'm trying to have fun.</h3>
                 <div class='category-space'>
                     
                     <div class='content-box'>
@@ -43,11 +43,11 @@
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Bug Invaders</h3> 
-                                <p class='content-summary-text'>Survive and kill the pesky invaders! Press space to fight back.</p>
+                                <h3 class='content-summary-title'>Flappy Bird</h3> 
+                                <p class='content-summary-text'>Clone of the infamous stress-inducer, on Phaser 3.</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/Bug-Invaders/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/bug-invaders' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Bug-Invaders/' target='_blank'>Not done</a>
+                                    <a href='https://github.com/sun-ruiheng/bug-invaders' target='_blank'>lol</a>
                                 </span>
                             </div>
                         </div>
@@ -59,11 +59,11 @@
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Counting Conundrum</h3> 
-                                <p class='content-summary-text'>Remember the numbers, and recall in ascending order!</p>
+                                <h3 class='content-summary-title'>Brawl?</h3> 
+                                <p class='content-summary-text'>Funky yet informative website related to one of my favorite games.</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/Counting-Conundrum/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/counting-conundrum' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Bug-Invaders/' target='_blank'>Not done</a>
+                                    <a href='https://github.com/sun-ruiheng/bug-invaders' target='_blank'>lol</a>
                                 </span>
                             </div>
                         </div>
@@ -75,11 +75,11 @@
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary"> 
-                                <h3 class='content-summary-title'>Codey Jump</h3> 
-                                <p class='content-summary-text'>Jump, Jump, Jump. There is no point to this game!</p>
+                                <h3 class='content-summary-title'>NLP Bot</h3> 
+                                <p class='content-summary-text'>Yo ngl, idk what I'm gonna do with this yet.</p>
                                 <span>
-                                    <a href='https://sun-ruiheng.github.io/Codey-Jump/' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/Codey-Jump' target='_blank'>GitHub</a>
+                                    <a href='https://sun-ruiheng.github.io/Bug-Invaders/' target='_blank'>Not done</a>
+                                    <a href='https://github.com/sun-ruiheng/bug-invaders' target='_blank'>lol</a>
                                 </span>
                             </div>
                         </div>
