--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ruiheng's Portfolio</title>
+        <title>About Me</title>
         <link href='../css/aboutme.css' type='text/css' rel='stylesheet'/>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@400;500&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
