--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -43,17 +43,17 @@
                         <span class='contact-text'>sunruiheng2001@gmail.com</span>
                     </div>
                     <div id='contacts-container'>
-                        <div class='social-site'>
+                        <div id='linkedin' class='social-site'>
                             <img src="../images/linkedin.png">
                             <span class='contact-text'>LinkedIn</span>
                         </div>
-                        <div class='social-site'>
+                        <div id='github' class='social-site'>
                             <img src="../images/github.png">
                             <span class='contact-text'>GitHub</span>
                         </div>
-                        <div class='social-site'>
-                            <img src="../images/resume.webp">
-                            <span class='contact-text'>Resume</span>
+                        <div id='resume' class='social-site'>
+                            <img src="../images/resume.webp" alt="My Resume">
+                            <span class='contact-text'>Résumé</span>
                         </div>
                     </div>
                 </div>
@@ -63,6 +63,7 @@
         </div>
         
 
-
+        
     </body>
+    <script type='text/javascript' src='../js/aboutme.js'></script>
 </html>
