trying to do without php

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -31,14 +31,18 @@
 
         <!-- tryna make the email popup. -->
         <div id='popup'>
-            <form action='../php/emailform.php' method="POST">
+            <form action='"mailto:sunruiheng@gmail.com' method="POST">
                 <input type="text" name='name' placeholder="Name: "/>
                 <input type="text" name='mail' placeholder="Your Email: "/>
                 <input type="text" name='subject' placeholder="Subject: "/>
                 <textarea name='message' placeholder="Message: "></textarea>
                 <button type='submit' name="submit">Submit</button>
             </form>
+
+            
         </div>
+
+    
 
 
 
