ok i'll settle for mailto

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -58,8 +58,11 @@
                 <h2 id='get-in-touch'><u>Let's get in touch!</u></h2>
                 <div id='my-contacts'>
                     <div id='email'>
-                        <img src="../images/emailclosed.png"/>
-                        <span class='contact-text'>sunruiheng2001@gmail.com</span>
+                        <a href="mailto:sunruiheng2001@gmail.com">
+                            <img src="../images/emailclosed.png"/>
+                            <span class='contact-text'>sunruiheng2001@gmail.com</span>
+                        </a>
+                        
                     </div>
                     <div id='contacts-container'>
                         <div id='linkedin' class='social-site'>
