--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>About Me</title>
         <link href='../css/aboutme.css' type='text/css' rel='stylesheet'/>
@@ -15,13 +15,14 @@
             <div class='title'>
                 <h1>About</h1>
                 <h2>Ruiheng</h2>
+                <h3>Contact me or something.</h3>
             </div>
 
             <div class='menu-and-pic'>
                 <ul>
                     <li><a class='menu-link' href='../index.html'>Portfolio</a></li>
                     <li><a class='menu-link' href="./blog.html">Blog</a></li>
-                    <li class="current">About Me</li>
+                    <li class="current">About</li>
                     
                 </ul>
                 <img src="../images/profilepic3.jpg" alt='Profile Icon'/>
