--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -25,7 +25,7 @@
                     <li class="current">About</li>
                     
                 </ul>
-                <img src="../images/profilepic3.jpg" alt='Profile Icon'/>
+                <img src="../images/catt.png" alt='Cat'/>
             </div>
         </header>
         
