--- a/html/blog.html
+++ b/html/blog.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
     </head>
 
-    <body onscroll="changeNav()">
+    <body>
         <header id='main-header'>  <!-- entire top nav bar -->
             <div class='title'>
                 <h2>Ruiheng's</h2>
@@ -29,7 +29,7 @@
                     <li><a class='menu-link' href='../html/aboutme.html'>About</a></li>
                     
                 </ul>
-                <img src="../images/profilepic3.jpg" alt='Profile Icon'/>
+                <img src="../images/cat1.jpg" alt='Cat'/>
             </div>
         </header>
 
@@ -47,7 +47,7 @@
 
 
         <div class='filter'>
-            <h3 class="filter-title">Filter your content.</h3>
+            <h3 class="filter-title"><u>Filter your content.</u></h3>
             <p class="filter-title">...Or not, what can I do?</p>
             <form class="filter">
                 <div class='filter-category'>
