--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href='./html/blog.html' class='menu-link'>Blog</a></li>
                     <li><a href='./html/aboutme.html' class='menu-link'>About</a></li>
                 </ul>
-                <img src="./images/profilepic3.jpg" alt='Profile Icon'/>
+                <img src="./images/catb.jpg" alt='Cat'/>
             </div>
         </header>
 
