--- a/html/blog entries/paid adverts.html
+++ b/html/blog entries/paid adverts.html
@@ -2,5 +2,55 @@
 <html>
     <head>
         <title>Declaration of Advertisements</title>
+        <link rel="stylesheet" href="../../css/entry.css">
     </head>
+
+    <body onscroll="changeNav()">
+        <header id="nav">
+            <ul>
+                <li><a href="../../index.html">Portfolio</a></li>
+                <li class='bigger'><a href='../blog.html'>Blog</a></li>
+                <li><a href="../aboutme.html">About</a></li>
+            </ul>
+        </header>
+        <div class="longgg"></div>
+    </body>
+    <script src='../../js/entry.js' type='text/javascript'></script>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam donec adipiscing tristique risus nec feugiat in fermentum. Id neque aliquam vestibulum morbi blandit. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper. In pellentesque massa placerat duis ultricies lacus sed. Mauris ultrices eros in cursus turpis. Turpis tincidunt id aliquet risus feugiat in. Molestie at elementum eu facilisis sed odio morbi quis commodo. Purus gravida quis blandit turpis. Gravida arcu ac tortor dignissim convallis. Eu tincidunt tortor aliquam nulla facilisi. Blandit cursus risus at ultrices mi tempus imperdiet nulla. Tellus id interdum velit laoreet. Dignissim suspendisse in est ante. Arcu cursus vitae congue mauris rhoncus aenean. Consectetur lorem donec massa sapien faucibus et molestie ac. Egestas erat imperdiet sed euismod nisi porta lorem mollis. Nunc sed id semper risus in hendrerit gravida rutrum.
+
+Ipsum dolor sit amet consectetur adipiscing elit. In nibh mauris cursus mattis. Et malesuada fames ac turpis egestas integer eget. Vulputate sapien nec sagittis aliquam. Orci a scelerisque purus semper eget duis at tellus at. Ullamcorper eget nulla facilisi etiam dignissim diam. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Aliquam ut porttitor leo a diam sollicitudin tempor. Nunc faucibus a pellentesque sit amet porttitor eget dolor morbi.
+
+Etiam dignissim diam quis enim lobortis. Quis commodo odio aenean sed adipiscing diam donec. Nec ultrices dui sapien eget mi proin sed libero. In hac habitasse platea dictumst vestibulum rhoncus est. Aliquet enim tortor at auctor urna nunc. Magna fermentum iaculis eu non. Condimentum mattis pellentesque id nibh tortor id aliquet. Dui accumsan sit amet nulla facilisi morbi tempus iaculis urna. Sit amet nisl suscipit adipiscing. Ultrices mi tempus imperdiet nulla malesuada pellentesque. Est pellentesque elit ullamcorper dignissim cras. Tortor dignissim convallis aenean et tortor. Sapien nec sagittis aliquam malesuada bibendum arcu. Elementum sagittis vitae et leo duis ut diam quam nulla. Nunc scelerisque viverra mauris in. Porttitor lacus luctus accumsan tortor posuere ac ut consequat semper.
+
+Ac odio tempor orci dapibus ultrices in iaculis nunc sed. Facilisi etiam dignissim diam quis. Tempus urna et pharetra pharetra massa massa. Non arcu risus quis varius quam quisque id diam vel. Enim sed faucibus turpis in. Mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. At tellus at urna condimentum mattis pellentesque id nibh. Risus pretium quam vulputate dignissim suspendisse in est. Mauris commodo quis imperdiet massa tincidunt nunc. Volutpat lacus laoreet non curabitur. Malesuada fames ac turpis egestas sed. In hendrerit gravida rutrum quisque non tellus orci. Porta lorem mollis aliquam ut porttitor leo a diam. Aenean vel elit scelerisque mauris. Sed nisi lacus sed viverra tellus. Facilisis mauris sit amet massa. Fermentum iaculis eu non diam phasellus. Ultrices sagittis orci a scelerisque purus.
+
+Netus et malesuada fames ac turpis egestas. Tincidunt praesent semper feugiat nibh. Turpis tincidunt id aliquet risus feugiat in ante. Amet commodo nulla facilisi nullam vehicula ipsum. Aliquet sagittis id consectetur purus. Ullamcorper velit sed ullamcorper morbi tincidunt ornare. Enim sit amet venenatis urna cursus eget. Nisi est sit amet facilisis magna etiam. Ac tincidunt vitae semper quis lectus nulla at volutpat diam. Adipiscing elit duis tristique sollicitudin nibh. Molestie at elementum eu facilisis sed odio morbi. Quis vel eros donec ac odio tempor. Aenean et tortor at risus viverra adipiscing at in tellus. Id semper risus in hendrerit gravida rutrum quisque non. In hendrerit gravida rutrum quisque non tellus. In egestas erat imperdiet sed euismod nisi porta. Auctor urna nunc id cursus metus aliquam eleifend. -->
