--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Libre+Baskerville&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Benne&family=Truculenta:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -52,7 +53,7 @@
             <div id='info-area'>
                 <h1 id='info-title'>Hey there!</h1>
                 <h1>I'm Sun Ruiheng,</h1>
-                <p>an incoming Computer Science (with Mathematics) undergraduate at NUS, currently serving in the Republic of Singapore Navy.</p>
+                <p>an incoming Computer Science and Mathematics (Double Degree) undergraduate at NUS, currently serving in the Republic of Singapore Navy.</p>
                 <p>I like sports, I like video games, and I have sort of an unhealthy obsession with cats.</p>
                 <p>While I have some time, I'd love to explore the boundless wealth of opportunities out there, in STEM and other sectors.</p>
                 
