added big tech entry
made general ui for blog entries, added dont be evil book review in html

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -53,7 +53,7 @@
             <div id='info-area'>
                 <h1 id='info-title'>Hey there!</h1>
                 <h1>I'm Sun Ruiheng,</h1>
-                <p>an incoming Computer Science and Mathematics (Double Degree) undergraduate at NUS, currently serving in the Republic of Singapore Navy.</p>
+                <p>an incoming Mathematics and Computer Science undergraduate at NUS, currently serving in the Republic of Singapore Navy.</p>
                 <p>I like sports, I like video games, and I have sort of an unhealthy obsession with cats.</p>
                 <p>While I have some time, I'd love to explore the boundless wealth of opportunities out there, in STEM and other sectors.</p>
                 
