--- a/html/blog entries/big tech.html
+++ b/html/blog entries/big tech.html
@@ -103,9 +103,11 @@ Speaking of making good headlines, I have to mention the filter bubble. You get 
 If Big Tech did care, though, what can they change? They could give clear disclaimers that content is being filtered away, or provide the option to turn off content personalisation, but neither half-hearted method is really going to effect anything. The only way I see this going away is via a thorough overhaul of the business model that does anything to maximise clicks and views.
 </p>
 
+<br>
+
 <h2 class='chapter-title'>4 &nbsp; Addiction</h2>
 <p class='content-paragraph'>
-“Of all the states of mind that companies and brands seek to induce, addiction is by far the most desirable.” 
+<i>“Of all the states of mind that companies and brands seek to induce, addiction is by far the most desirable.”</i>
 </p>
 <p class='content-paragraph'>
 Foroohar seems particularly upset about this one. She uses an anecdote of her young son whose addiction to his mobile devices led her to realise the severity of Big Tech’s social erosion. There isn’t much news for you here, because I’m sure everyone knows social media apps and video games are designed to keep you on them, so they can use your attention to collect more data and sell more ads. However, not everyone knows just how much effort organisations put into making users entirely hooked. Tech giants work with psychology experts to research methods that keep their users as addicted as possible and consistently returning for more. The addicted begin to lose the ability to focus on other subjects, shrink their attention span, among other consequences that uncannily mirror those of drug addicts. It’s in the very fabric of government to look out for society by regulating otherwise profit-centered players. Carbon emissions are taxed. Drugs are banned or heavily controlled. When it comes to addictive technology, suddenly, not so much.
@@ -114,12 +116,14 @@ Foroohar seems particularly upset about this one. She uses an anecdote of her yo
 At this point it’s clear that Big Tech doesn’t give a damn about its users’ well-being. The only topic left to ponder about is how accountable they should be held. Is it really wrong of a tech firm to seek users’ extensive subscription to its services, so as to boost profits? Not everyone conducts research that immediately targets human vulnerabilities — some apps and games might just be very engrossing. How do we differentiate between good design of products and evil engineering of addiction? Will we just punish merit, by penalising all the services people get addicted to? Addiction is a scale, and the grey area is just too hazy. Barring a revamp of the entire internet where products and services remove all addictive qualities and act solely in consumers’ interests, we can only hope to catch the ones huddled in the lab trying to come up with the best way to have their victims itching for more.
 </p>
 
+<br>
+
 <h2 class='chapter-title'>Conclusion</h2>
 <p class='content-paragraph'>
 Overall, this book has been enlightening in various ways by comprehensively discussing Big Tech’s questionable decisions over the years. A couple of issues studied thoroughly by Foroohar had been on my mind before, but without enough depth and clarity before this read. The difficulty I (and Foroohar, probably) had when attempting to sort the multitude of issues into discrete chapters proved how interconnected these problems were. Foroohar also offered her fair share of solutions, but I think they’re either too idealistic or wouldn’t be effective enough. Then again, I guess if anyone had a better idea we wouldn’t be in this pickle today.
 </p>
 <p class='content-paragraph'>
-And it’s done! That was fun, it really was. Now it’s time for me to heed Foroohar’s call and get off my computer. (Rana Foroohar ended her book with a corny joke, and so will I.)
+And it’s done! That was fun, it really was. Now it’s time for me to heed Foroohar’s call and get off my computer. (Rana Foroohar ended her book on a corny joke, and so will I.)
 </p>
 
 
