smooth jump (anchor)

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <div class='category category4'>
                 <h2 class='category-title'>Phaser.JS</h2>
-                <h3 class='category-subtitle'>Games I built as part of the <span>Codecademy Phaser.JS</span> course.</h3>
+                <h3 class='category-subtitle'>Mini games I built as part of the <span>Codecademy Phaser.JS</span> course.</h3>
                 <div class='category-space'>
                     
                     <div class='content-box'>
