--- a/html/blog entries/big tech.html
+++ b/html/blog entries/big tech.html
@@ -33,7 +33,7 @@ font-family: 'Faustina', serif; -->
             <!-- <span class='minimise'>✕</span> -->
             <h2><u>Contents</u></h2>
             <a href='#c0'>Introduction</a>
-            <a href='#c1'>Data</a>
+            <a href='#c1'>Big Data</a>
             <a href='#c2'>The House Always Wins</a>
             <a href='#c3'>Duty of Care</a>
             <a href='#c4'>Addiction</a>
@@ -59,7 +59,7 @@ In this book, Foroohar doesn’t hold back any punches toward Big Tech and its l
 
 <br>
 
-<h2 class='chapter-title' id='c1'>1 &nbsp; Data</h2>
+<h2 class='chapter-title' id='c1'>1 &nbsp; Big Data</h2>
 <p class='content-paragraph'>
 There’s one feature the biggest of Big Tech exploit in common: data. Of course it’s data. Data as a resource is so unique and critical due to its ability and tendency to facilitate a self-serving cycle if utilised efficiently, a process so prominent it’s been branded The Network Effect. Here’s how it works. Take a Big Tech firm, say Google. Its ubiquity stems not from some genius in its algorithm — not to discredit their engineers — but from the tremendous amount of data it wields at its arsenal. This data, put through the algorithm, allows for precise search results that return useful and accurate information, links, and all sorts of details to a user doing a Google search. And with auto-complete, the user never even finished his sentence. While this user leaves contented, Google gains new information from recording how much he scrolled, what he clicked, how long he spent finding what he needed — more data, to add to its impressive collection. Now with better data, it knows more about users and this particular subject they searched up, and becomes better at organising results for the next user to optimise some metric, such as maybe how far down users scroll before clicking a link. It’s clear how this cyclical process grows Google’s pool of data, making its algorithm better and better. And it’s also apparent how this develops a natural monopoly, as competitors with fewer users without such data are less efficient in providing results, and in turn attract fewer users — you get the gist. Essentially, all Google really needed was the reputation of being the go-to search engine, and once the ball’s rolling, eventually it was.
 </p>
