--- a/html/blog entries/big tech.html
+++ b/html/blog entries/big tech.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html lang='en'>
 <html>
     <head>
-        <title>Don't Be Evil</title>
+        <title>Review: Don't Be Evil</title>
         <link rel="stylesheet" href="../../css/entry.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
