fixed link mistakes
added .replit rules to automatically run. no longer require user to type in python3 script.py

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class='category category2'>
                 <h2 class='category-title'>Computer Science</h2>
                 <h3 class='category-subtitle'>Simple programs to implement concepts I picked up from the <span>Codecademy Computer Science</span> course.</h3>
-                <h4 class='category-subtitle'>These are exhibited on Repl.it for convenience. Enter <span>python3 script.py</span> in the console to begin each program.</h4>
+                <h4 class='category-subtitle'>These are exhibited on Replit for convenience. Man I love Replit.</h4>
                 <div class='category-space'>
 
                     <div class='content-box'>
@@ -69,7 +69,7 @@
                                 <h3 class='content-summary-title'>Towers of Hanoi</h3>
                                 <p class='content-summary-text'>Strategy game to implement the Stacks data structure.</p>
                                 <span>
-                                    <a href='https://repl.it/@sunruiheng/Towers-of-Hanoi#stack.py' target='_blank'>Try It!</a>
+                                    <a href='https://repl.it/@sunruiheng/Towers-of-Hanoi#.replit' target='_blank'>Try It!</a>
                                     <a href='https://github.com/sun-ruiheng/Towers-of-Hanoi' target='_blank'>GitHub</a>
                                 </span>
                             </div>
@@ -85,7 +85,7 @@
                                 <h3 class='content-summary-title'>Maze Explorer</h3>
                                 <p class='content-summary-text'>Navigate through a maze represented by the Graphs data structure.</p>
                                 <span>
-                                    <a href='https://repl.it/@sunruiheng/Maze-Explorer#graph.py' target='_blank'>Try It!</a>
+                                    <a href='https://repl.it/@sunruiheng/Maze-Explorer#.replit' target='_blank'>Try It!</a>
                                     <a href='https://github.com/sun-ruiheng/Maze-Explorer' target='_blank'>GitHub</a>
                                 </span>
                             </div>
@@ -101,7 +101,7 @@
                                 <h3 class='content-summary-title'>SkyRoute</h3>
                                 <p class='content-summary-text'>This graph search algorithm derives shortest routes within the Vancouver Metro System.</p>
                                 <span>
-                                    <a href='https://repl.it/@sunruiheng/Maze-Explorer#graph.py' target='_blank'>Try It!</a>
+                                    <a href='https://replit.com/@sunruiheng/SkyRoute#.replit' target='_blank'>Try It!</a>
                                     <a href='https://github.com/sun-ruiheng/Maze-Explorer' target='_blank'>GitHub</a>
                                 </span>
                             </div>
