changed vancouver to sg

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary">  
-                                <h3 class='content-summary-title'>Snake</h3>
+                                <h3 class='content-summary-title'>Snake (Pygame)</h3>
                                 <p class='content-summary-text'>A little laggy online, so use GitHub and clone it yourself for the full experience!</p>
                                 <span>
                                     <a href='https://replit.com/@sunruiheng/snake' target='_blank'>Try It!</a>
@@ -108,15 +108,15 @@
 
                     <div class='content-box'>
                         <div class="initial-content">
-                            <img src='./images/skyroute.PNG' alt='SkyRoute' class='content-image'/>
+                            <img src='./images/mrtmap.jpg' alt='MRT Route' class='content-image'/>
                         </div>
                         <div class="overlay-content">
                             <div class="content-summary">  
-                                <h3 class='content-summary-title'>SkyRoute</h3>
-                                <p class='content-summary-text'>This graph search algorithm derives shortest routes within the Vancouver Metro System.</p>
+                                <h3 class='content-summary-title'>MRT Route</h3>
+                                <p class='content-summary-text'>Breadth-First Search to find the shortest MRT route.</p>
                                 <span>
-                                    <a href='https://replit.com/@sunruiheng/SkyRoute#.replit' target='_blank'>Try It!</a>
-                                    <a href='https://github.com/sun-ruiheng/Maze-Explorer' target='_blank'>GitHub</a>
+                                    <a href='https://replit.com/@sunruiheng/MRT-Route' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/MRT-Route' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
