--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
                     
                     <div class='content-box'>
                         <div class="initial-content">
+                            <img src='./images/astar.jpg' alt='A* Pathfinder' class='content-image'/>
+                        </div>
+                        <div class="overlay-content">
+                            <div class="content-summary">  
+                                <h3 class='content-summary-title'>A* Pathfinder</h3>
+                                <p class='content-summary-text'>Efficient Greedy Algorithm determines shortest routes.</p>
+                                <span>
+                                    <a href='https://replit.com/@sunruiheng/A-Star-Pathfinder' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/A-Star-Pathfinder' target='_blank'>GitHub</a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='content-box'>
+                        <div class="initial-content">
                             <img src='./images/snek.png' alt='Snake' class='content-image'/>
                         </div>
                         <div class="overlay-content">
