--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
             <div class='category category1'>
                 <h2 class='category-title'>Personal Projects</h2>
-                <h3 class='category-subtitle'>The more original projects of mine. They'll get better I promise. :/</h3>
+                <h3 class='category-subtitle'>The more original projects of mine. Check out their GitHub READMEs for details.</h3>
+                <h4 class='category-subtitle'>They get laggy when hosted online — clone them for the full experience!</h4>
                 <div class='category-space'>
                     
                     <div class='content-box'>
@@ -69,7 +70,7 @@
                         <div class="overlay-content">
                             <div class="content-summary">  
                                 <h3 class='content-summary-title'>Snake (Pygame)</h3>
-                                <p class='content-summary-text'>A little laggy online, so use GitHub and clone it yourself for the full experience!</p>
+                                <p class='content-summary-text'>Classic Snake game... Nom nom nom. Don't bite yourself!</p>
                                 <span>
                                     <a href='https://replit.com/@sunruiheng/snake' target='_blank'>Try It!</a>
                                     <a href='https://github.com/sun-ruiheng/snake' target='_blank'>GitHub</a>
@@ -150,7 +151,7 @@
 
             <div class='category category1'>
                 <h2 class='category-title'>Web Development</h2>
-                <h3 class='category-subtitle'>Small projects to implement concepts I picked up from the <span>Codecademy Web Development</span> course.</h3>
+                <h3 class='category-subtitle'>Small projects to mess around with concepts I picked up from the <span>Codecademy Web Development</span> course.</h3>
                 <div class='category-space'>
 
                     
@@ -181,6 +182,22 @@
                                 <span>
                                     <a href='https://sun-ruiheng.github.io/Tea-Cozy/' target='_blank'>Visit</a>
                                     <a href='https://github.com/sun-ruiheng/Tea-Cozy/' target='_blank'>GitHub</a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='content-box'>
+                        <div class="initial-content">
+                            <img src='./images/tourists.jpg' alt='Wanderlust' class='content-image'/>
+                        </div>
+                        <div class="overlay-content">
+                            <div class="content-summary"> 
+                                <h3 class='content-summary-title'>Wanderlust</h3> 
+                                <p class='content-summary-text'>Tourism helper, utilising two APIs.</p>
+                                <span>
+                                    <a href='https://sun-ruiheng.github.io/Wanderlust/' target='_blank'>Try It!</a>
+                                    <a href='https://github.com/sun-ruiheng/Wanderlust' target='_blank'>GitHub</a>
                                 </span>
                             </div>
                         </div>
