--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>My Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link href='./css/index.css' type='text/css' rel='stylesheet'/>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Oswald:wght@500&display=swap" rel="stylesheet">
