added football API

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <div class='content-box'>
+                        <div class="initial-content">
+                            <img src='./images/bayernpic.jpeg' alt='Football Site' class='content-image'/>
+                        </div>
+                        <div class="overlay-content">
+                            <div class="content-summary">  
+                                <h3 class='content-summary-title'>Football Stuff</h3>
+                                <p class='content-summary-text'>Up-to-date football information using the <em>football-data.org</em> API.</p>
+                                <span>
+                                    <a href='https://sun-ruiheng.github.io/Football/' target='_blank'>Visit</a>
+                                    <a href='https://github.com/sun-ruiheng/Football/' target='_blank'>GitHub</a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class='content-box'>
                         <div class="initial-content">
